@@ -2,6 +2,13 @@
 
 Switched from RNetCDF to ncdf package for netcdf file support
 
+Added three slots to class BasicRaster
+unit='vector' ; to store the unit of the layer(s), e.g. kg m-2 s-1
+zname='character' ; to store the name of the z (layers) variable, e.g. "time"
+zvalue='vector' ; to store the values of the z variable, e.g. the dates corresponding to each later
+These slots are now filled for values from netcdf files with "CF" type convention (e.g. cmip), with an attempt to covert "days since" to a Date (coverted to string).
+Not yet used in writing, or with other formats
+
 -------------------------------------------------------------
 2-Aug-2010, version 1.3-8
 
